fix FindBugs issue: DM_BOOLEAN_CTOR
svn path=/trunk/; revision=45875


Former-commit-id: d76cee93a738fc0128143a8bf82714b146ff5741